# sc2-voxelbot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  bot.sublime-project  bot.sublime-workspace  cache.sh  filter.sh  ideas.md  maps  plot_combat.py  plot_experiment_combat.py  save_cache.sh  sync_cache.sh
attention/: attention.py
bot/: AssignHarvesters.cpp  BehaviorTree.cpp  BehaviorTree.h  Bot.h  Bot.h.orig  BuildOptimizer.cpp  BuildOptimizer.h  BuildOptimizerGenetic.cpp  BuildOptimizerGenetic.h  BuildingPlacement.cpp  BuildingPlacement.h  CameraController.cpp  CameraController.h  CombatPredictor.cpp  CombatPredictor.h  CompositionAnalyzer.cpp  CompositionAnalyzer.h  ConditionNode.cpp  ControlFlowNode.cpp  DeductionManager.cpp  DeductionManager.h  DependencyAnalyzer.cpp  DependencyAnalyzer.h  Group.cpp  Group.h  Influence.cpp  Influence.h  InfluenceManager.cpp  InfluenceManager.h  Mappings.cpp  Mappings.cpp~RF79a878.TMP  Mappings.cpp~RF7fa658.TMP  Mappings.h  MicroNodes.cpp  MicroNodes.h  ParallelNode.cpp  ParralelNode.cpp  Pathfinding.cpp  Pathfinding.h  Predicates.cpp  (+31 more)
bot/behaviortree/: BehaviorTree.cpp  BehaviorTree.h  MicroNodes.cpp  MicroNodes.h  ScoutingNodes.cpp  ScoutingNodes.h  StrategicNodes.cpp  StrategicNodes.h  TacticalNodes.cpp  TacticalNodes.h
bot/bot/: main.cpp  main.h
bot/build_optimizer/: main.cpp
bot/build_order_train/: build_order_train.py  main.cpp  qlearning.py  serialized_state.h  test.cpp  testlib.cpp
bot/build_order_train/baselines/: build_order_env.py  build_order_loader.py  predict_buildorder.py  replay_memory.py  simple_a2c.py
bot/caching/: main.cpp  main_py.cpp
bot/combat_predictor_train/: main.cpp
bot/composition_analyzer/: main.cpp
bot/composition_analyzer2/: main.cpp
bot/entrypoints/: debug_army_comp.cpp  debug_bo.cpp  experiment_buildorder.cpp  experiment_buildorder_sim.cpp  experiment_combat.cpp  experiment_compare_buildorder.cpp  mcts_cache_unit_tests.cpp  mcts_test.cpp  test_simulator.cpp  view_replay.cpp
bot/mcts/: mcts.cpp  mcts.h  mcts_debugger.cpp  mcts_debugger.h  mcts_test.cpp  variance_estimator.cpp  variance_estimator.h
bot/micro_train/: micro_train.cpp  micro_train.py
bot/ml/: game_state_loader.cpp  game_state_loader.h  genetic_planning.cpp  genetic_planning.h  mcts_cache.cpp  mcts_cache.h  mcts_sc2.cpp  mcts_sc2.h  ml_movement.cpp  ml_movement.h  pybind11_numpy.h  replay.cpp  replay.h  rl_planning_env.cpp  rl_planning_env.h  simulator.cpp  simulator.h  simulator_context.h  tensor.cpp  tensor.h
bot/optimizer_train/: build_optimizer_nn.h  main.cpp  optimizer_train.py
bot/python/: a2c.py  attention.py  attention_test.py  build_order_loader.py  build_order_train.py  build_order_train2.py  common.py  custom_a2c.py  custom_env.py  dataset_folder.py  experiment_buildorder.py  experiment_buildorder_sim.py  experiment_compare_buildorder.py  game_state_loader.py  generated_mappings.py  mappings.py  optimizer_train.py  predictor_combat.py  predictor_movement.py  predictor_movement_target.py  predictor_plannning.py  predictor_win.py  replay_memory.py  replay_saver.py  rl_planning_env.py  simple_a2c.py  simulator_visualizer.py  testfile.py  trainer_buildorder.py  trainer_movement.py  trainer_movement_target.py  trainer_rnn.py  trainer_win.py  training_algorithm.py  win_predictor.py  win_predictor2.py
bot/python_bindings/: bindings.cpp  bindings.h  test.py
bot/replay_analyzer/: main.cpp  map_exporter.cpp
bot/utilities/: build_state_serialization.h  bump_allocator.h  influence.cpp  influence.h  ladder_interface.h  mappings.cpp  mappings.h  pathfinding.cpp  predicates.cpp  predicates.h  renderer.cpp  sc2_serialization.h  stdutils.h  unit_data_caching.cpp  unit_data_caching.h
maps/Test/: Empty.SC2Map
voxelbotlib/buildorder/: build_time_estimator.cpp  build_time_estimator.h  optimizer.cpp  optimizer.h
voxelbotlib/combat/: simulator.h
voxelbotlib/utilities/: influence.cpp  predicates.cpp  predicates.h  python_utils.h  renderer.cpp  sc2_serialization.h
